Fix: weather icon overlapping day title

--- a/sass/_weather.scss
+++ b/sass/_weather.scss
@@ -25,7 +25,7 @@
       }
 
       img {
-        margin:-10px 0;
+        margin:-5px 0;
       }
     }
   }
